--- a/Front-end/argentbank-front/src/styles/Sass/Index.scss
+++ b/Front-end/argentbank-front/src/styles/Sass/Index.scss
@@ -1,5 +1,13 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html {
+	font-family: Avenir, Helvetica, Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-align: center;
+	color: #2c3e50;
+}
+
+body {
+	margin: 0;
+	display: flex;
+	flex-direction: column;
 }
