--- a/Front-end/argentbank-front/src/styles/Sass/Header.scss
+++ b/Front-end/argentbank-front/src/styles/Sass/Header.scss
@@ -10,19 +10,7 @@
 		align-items: center;
 		max-width: 100%;
 		width: 200px;
-	}
-	.sr-only {
-		border: 0 !important;
-		clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
-		-webkit-clip-path: inset(50%) !important;
-		clip-path: inset(50%) !important; /* 2 */
-		height: 1px !important;
-		margin: -1px !important;
-		overflow: hidden !important;
-		padding: 0 !important;
-		position: absolute !important;
-		width: 1px !important;
-		white-space: nowrap !important; /* 3 */
+		height: 55px;
 	}
 	.header-nav-signed-user {
 		.header-nav-signed-user-name-and-icon {
